# VitaFNAF1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: assetlist.json
assets/fonts/: list.json
assets/images/: list.json
assets/original/: list.json
assets/vita/livearea/contents/: template.xml
scripts/: build-vita.sh  build.sh  clean.sh  run-vita.sh  run.sh
src/: main.cpp
src/nodes/: all.hpp
src/nodes/LoadingState/: LoadingBar.cpp  LoadingBar.hpp  LoadingSprite.cpp  LoadingSprite.hpp  LoadingText.cpp  LoadingText.hpp  all.hpp
src/nodes/MainState/: FPSText.cpp  FPSText.hpp  MainText.cpp  MainText.hpp  ScrollingRectangles.cpp  ScrollingRectangles.hpp  all.hpp
src/nodes/MenuState/: BackgroundFreddy.cpp  BackgroundFreddy.hpp  BackgroundStatic.cpp  BackgroundStatic.hpp  DemoText.cpp  DemoText.hpp  GameTitle.cpp  GameTitle.hpp  MenuController.cpp  MenuController.hpp  Scanlines.cpp  Scanlines.hpp  SlidingBar.cpp  SlidingBar.hpp  all.hpp
src/nodes/WarningState/: WarningSprite.cpp  WarningSprite.hpp  all.hpp
src/states/: LoadingState.cpp  LoadingState.hpp  MainState.cpp  MainState.hpp  MenuState.cpp  MenuState.hpp  WarningState.cpp  WarningState.hpp  all.hpp
